исключён тип мероприятия из поиска на главной странице. теперь показываются только либо открытые, либо закрытые мероприятия. добавлено поле "начальная дата"

--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
@@ -33,9 +33,9 @@
 		    <span asp-validation-for="CategoryId"></span>
 	    </div>
 
-        <div class="form-group">
-            @Html.DropDownListFor(x => x.Type, Html.GetEnumSelectList<EEventType>(), null, new {@class = "form-control"})
-        </div>
+        @*<div class="form-group">
+            @Html.DropDownListFor(x => x.Type, Html.GetEnumSelectList<EEventState>(), null, new {@class = "form-control"})
+        </div>*@
 
 		<div class="form-group">
 			<input class="form-control" asp-for="Email" placeholder="Email для обратной связи"/>
