--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
@@ -1,6 +1,4 @@
-@using BeeFee.Model.Embed
 @using BeeFee.WebApplication.Infrastructure
-@using FormMethod = Microsoft.AspNetCore.Mvc.Rendering.FormMethod
 @model BeeFee.WebApplication.Areas.Org.Models.EventEditModel
 @{
     ViewData["Title"] = "Add";
@@ -99,13 +97,14 @@
         </div>
 
         <div class="form-group">
-            <input type="submit" value="Save" class="btn"/>
+			<input type="submit" value="Save" class="btn" />
+			<a asp-action="ToModerate" asp-route-companyId="@Model.CompanyId" asp-route-id="@Model.Id" asp-route-version="@Model.Version">Опубликовать</a>
         </div>
     </div>
 </form> 
 
 @section Scripts{ 
-<script src="~/lib/ckeditor/ckeditor.js"></script>
+	<script src="~/lib/ckeditor/ckeditor.js"></script>
 	<script type="text/javascript">
         $(function () {
             $('#startDateTimePicker').datetimepicker({
