First worked WebApp

--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Moderator/Views/Event/Moderate.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Moderator/Views/Event/Moderate.cshtml
@@ -4,30 +4,17 @@
 	<input type="hidden" asp-for="Version" />
 	<div class="validation" asp-validation-summary="ModelOnly"></div>
 	<div class="container">
-
+		
+		@* TODO: Частичная страница предпросмотра *@
+		
 		<div class="form-group">
-			<input class="form-control" asp-for="Name" placeholder="Название компании" />
-			<span asp-validation-for="Name" class="text-danger"></span>
+			<input class="form-control" asp-for="Comment" placeholder="Comment" />
+			<span asp-validation-for="Comment" class="text-danger"></span>
 		</div>
 
 		<div class="form-group">
-			<input class="form-control" asp-for="Title" placeholder="Title" />
-			<span asp-validation-for="Title" class="text-danger"></span>
-		</div>
-
-		<div class="form-group">
-			<input class="form-control" asp-for="Caption" placeholder="Caption" />
-			<span asp-validation-for="Caption" class="text-danger"></span>
-		</div>
-
-		<div class="form-group">
-			<input class="form-control" asp-for="Label" placeholder="Label" />
-			<span asp-validation-for="Label" class="text-danger"></span>
-		</div>
-
-		<div class="form-group">
-			<input type="submit" value="Save" class="btn" />
-			<a asp-action="Cancel">Cancel</a>
+			<button name="result" value="true" class="btn">Moderate</button>
+			<button name="result" value="false" class="btn">Cancel</button>
 		</div>
 	</div>
 </form>
