--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
@@ -1,7 +1,8 @@
 @using BeeFee.WebApplication.Infrastructure
+@using SharpFuncExt
 @model BeeFee.WebApplication.Areas.Org.Models.EventEditModel
 @{
-    ViewData["Title"] = "Add";
+    ViewData["Title"] = "Edit";
 }
 
 <h2>Edit @Model.Name</h2>
@@ -87,7 +88,7 @@
 		    <input class="form-control" placeholder="Cover" type="file" id="file" />
 			@if (!String.IsNullOrEmpty(Model.Cover))
 			{
-				<img src="@Url.GetImageUrl(Model.Url, Model.Cover, 368, 190)"/>
+				<img src="@Url.GetImageUrl(Model.CompanyUrl, Model.Url, Model.Cover, 368, 190)"/>
 			}
 		    <input type="hidden" class="form-control" placeholder="Cover" asp-for="Cover"/>
 	    </div>
@@ -96,11 +97,20 @@
             <textarea class="form-control" rows="10" placeholder="HTML here" asp-for="Html" id="html"></textarea>
         </div>
 
-        <div class="form-group">
+		<div class="form-group">
 			<input type="submit" value="Save" class="btn" />
 			<a asp-action="ToModerate" asp-route-companyId="@Model.CompanyId" asp-route-id="@Model.Id" asp-route-version="@Model.Version">Опубликовать</a>
-        </div>
-    </div>
+		</div>
+		
+		@if (Model.Comments.IsNotNull())
+		{
+			foreach (var comment in Model.Comments)
+			{
+				<hr/>
+				@comment
+			}
+		}
+	</div>
 </form> 
 
 @section Scripts{ 
@@ -130,7 +140,6 @@
 				fd.append('setting', 'event');
 				fd.append('companyName', '@(Model.CompanyUrl)');
 				fd.append('eventName', '@(Model.Url)');
-				fd.append('key', '@(Model.ImagesKey)');
 		        $.ajax({
 					url: '@(BeeFeeWebAppSettings.Instance.ImagesUrl)/api/home',
 			        contentType: false,
@@ -145,7 +154,7 @@
 							return;
 						}
 						$this.next("img").remove();
-				        $this.after("<img src='@(BeeFeeWebAppSettings.Instance.ImagesUrl)/min/@(Model.Url)/368x190/" + data.path + "' />");
+				        $this.after("<img src='@(BeeFeeWebAppSettings.Instance.ImagesUrl)/min/@(Model.CompanyUrl)/@(Model.Url)/368x190/" + data.path + "' />");
 				        $("#Cover").val(data.path);
 			        }
 		        });
