--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Event/Event.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Event/Event.cshtml
@@ -6,7 +6,7 @@
 
 <div class="event">
     <div data-fixed-wrap="info">
-        <div class="event-intro hidden-xs" style="background-image: url('@(Url.GetImageUrl(Model.Event.Url, Model.Event.Page.Cover, 1162, 600))');">
+        <div class="event-intro hidden-xs" style="background-image: url('@(Url.GetImageUrl(Model.Event.Parent.Url, Model.Event.Url, Model.Event.Page.Cover, 1162, 600))');">
             <div class="container">
                 <div class="event-intro--in">
                     <div class="event-intro--box">
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </div>
-        <div class="event-intro visible-xs" style="background-image: url('@(Url.GetImageUrl(Model.Event.Url, Model.Event.Page.Cover, 1162, 600))');">
+        <div class="event-intro visible-xs" style="background-image: url('@(Url.GetImageUrl(Model.Event.Parent.Url, Model.Event.Url, Model.Event.Page.Cover, 1162, 600))');">
             <h1 class="event-intro--title">@Model.Event.Page.Caption</h1>
         </div>
         <div class="container">
