--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/_EventGridItem.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/_EventGridItem.cshtml
@@ -4,6 +4,6 @@
 
 <div class="col-xs-4 col-md-4">
 	<div class="grid--item">
-		<a class="item" href="/event/@Model.Parent.Url/@Model.Url"><span class="item--poster" style="background-image: url('@Url.GetImageUrl(Model.Url, Model.Page.Cover, 368, 190)');"></span><span class="item--date"><span>@Model.Page.Date</span></span><span class="item--title">@Model.Page.Caption</span></a>
+		<a class="item" href="/event/@Model.Parent.Url/@Model.Url"><span class="item--poster" style="background-image: url('@Url.GetImageUrl(Model.Parent.Url, Model.Url, Model.Page.Cover, 368, 190)');"></span><span class="item--date"><span>@Model.Page.Date</span></span><span class="item--title">@Model.Page.Caption</span></a>
 	</div>
 </div>
