--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Company/Add.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Company/Add.cshtml
@@ -3,7 +3,7 @@
 	ViewBag.Title = "Добавить компанию";
 }
 <div class="profile">
-	<form asp-action="Add" asp-controller="Company" method="post">
+	<form asp-action="Add" asp-controller="Company" method="post" enctype="multipart/form-data">
 		<div class="validation" asp-validation-summary="ModelOnly"></div>
 			
 		<div class="create--field is-big">
@@ -12,7 +12,7 @@
 		</div>
 			
 		<div class="create--file">
-			<input class="create--file-i" type="file">
+			<input class="create--file-i" name="file" type="file">
 			<div class="create--file-b">Загрузить логотип</div>
 		</div>
 
