--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/Error.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/Error.cshtml
@@ -1,10 +1,11 @@
-﻿@model ErrorViewModel
+@model ErrorPageModel
 @{
-    ViewData["Title"] = "Error";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Ошибка";
 }
 
 <h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h2 class="text-danger">@(string.IsNullOrEmpty(Model.Message) ? "При выполнении запроса произошла ошибка." : Model.Message)</h2>
 
 @if (Model.ShowRequestId)
 {
