Add Event Cover

--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Company/Add.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Company/Add.cshtml
@@ -12,7 +12,7 @@
 		</div>
 			
 		<div class="create--file">
-			<input class="create--file-i" name="file" type="file">
+			<input class="create--file-i" name="file" type="file"/>
 			<div class="create--file-b">Загрузить логотип</div>
 		</div>
 
