--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_TopMenuCabinet.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_TopMenuCabinet.cshtml
@@ -19,6 +19,6 @@
 		</ul>
 	</nav>
 	<ul class="header--links">
-		<li class="header--link"><a asp-action="LogOff" asp-controller="Account">@User.Identity.Name<i class="icon-logout"></i></a></li>
+		<li class="header--link"><a asp-area="" asp-action="LogOff" asp-controller="Account">@User.Identity.Name<i class="icon-logout"></i></a></li>
 	</ul>
 </div>
