--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Company/Edit.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Company/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model BeeFee.WebApplication.Areas.Org.Models.CompanyEditModel
+﻿@using BeeFee.WebApplication.Infrastructure
+@model BeeFee.WebApplication.Areas.Org.Models.CompanyEditModel
 @{
 	ViewBag.Title = "Управление компанией";
 }
@@ -11,10 +12,15 @@
 			<input class="create--field-i" asp-for="Name" placeholder="Название компании" />
 			<span asp-validation-for="Name" class="text-danger"></span>
 		</div>
-
+		
 		<div class="create--file">
-			<input class="create--file-i" type="file">
+			<input class="create--file-i" placeholder="Logo" type="file" id="file"/>
 			<div class="create--file-b">Загрузить логотип</div>
+			@if (!String.IsNullOrEmpty(Model.Logo))
+			{
+				<img style="display: block;" src="@Url.GetImageUrl(Model.Url, Model.Logo)"/>
+			}
+			<input type="hidden" class="form-control" placeholder="Logo" asp-for="Logo"/>
 		</div>
 
 		<div class="create--field with-icon is-small">
@@ -35,3 +41,35 @@
 		</div>
 	</form>
 </div>
+
+@section Scripts{ 
+	<script type="text/javascript">
+		$(function () {
+
+			$("#file").change(function() {
+				var $this = $(this);
+				var fd = new FormData;
+				fd.append('file', $this.prop('files')[0]);
+				fd.append('companyName', '@(Model.Url)');
+				$.ajax({
+					url: '@(BeeFeeWebAppSettings.Instance.ImagesUrl)/api/home',
+					contentType: false,
+					processData: false,
+					dataType: 'json',
+					method: "POST",
+					data: fd,
+					success: function (data) {
+						$this.next("span").remove();
+						if (data.error != null) {
+							$this.after("<span class=error>"+data.error+"</span>");
+							return;
+						}
+						$this.next("img").remove();
+						$this.after("<img src='@(BeeFeeWebAppSettings.Instance.ImagesUrl)/public/companies/@(Model.Url)/company.jpg' />");
+						$("#Logo").val("company.jpg");
+					}
+				});
+			});
+		});
+	</script>
+}
