--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Add.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Add.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Add</h2>
 
-<form asp-action="Add" asp-controller="Event" method="post" class="form-horizontal">
+<form asp-action="Add" asp-controller="Event" method="post" class="form-horizontal" enctype="multipart/form-data">
 	<div class="validation" asp-validation-summary="ModelOnly"></div>
 	<input type="hidden" asp-for="CompanyId" />
     <div class="container">
@@ -79,7 +79,11 @@
             </div>
         </div>
         
-        @*<div class="form-group">
+		<div class="form-group">
+			<input class="form-control" placeholder="Cover" type="file" name="file" id="file" />
+		</div>
+
+		@*<div class="form-group">
             <input type="text" class="form-control" placeholder="Price" asp-for="Price" />
             <span asp-validation-for="Price"></span>
         </div>*@
