верстка страницы со списком мероприятий в личном кабинете

--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
@@ -2,7 +2,7 @@
 @using SharpFuncExt
 @model BeeFee.WebApplication.Areas.Org.Models.EventEditModel
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Редактирование события";
 }
 
 <h2>Edit @Model.Name</h2>
