--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Event/Event.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Event/Event.cshtml
@@ -12,7 +12,7 @@
 @section Scripts{
     <script type="text/javascript">
         $(function() {
-            initEventPage('.phone-number');
+            initEventPage('.visitor-name', '.visitor-phone-number', '.visitor-email');
         });
     </script>
 }
