--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_LayoutCabinet.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_LayoutCabinet.cshtml
@@ -11,7 +11,8 @@
 		<link rel="stylesheet" href="~/css/eventpage.css" asp-append-version="true" />
 		<link rel="stylesheet" href="~/css/validation.css" asp-append-version="true" />
 		<link rel="stylesheet" href="~/css/xdsoft.css" asp-append-version="true" />
-		<link rel="stylesheet" href="~/css/cabinet.css" asp-append-version="true" />
+	    <link rel="stylesheet" href="~/css/cabinet.css" asp-append-version="true" />
+	    <link rel="stylesheet" href="~/css/createeventpage.css" asp-append-version="true" />
 	</environment>
 	<environment exclude="Development">
 		<link rel="stylesheet" href="~/css/siteprofile.min.css" asp-append-version="true" />
