--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Index.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Index.cshtml
@@ -1,48 +1,102 @@
 @using System.Linq
+@using BeeFee.Model.Embed
 @model IReadOnlyCollection<BeeFee.OrganizerApp.Projections.Event.EventProjection>
+@{
+    ViewBag.Header = "Мои события";
+}
+@functions{
 
-<h2>My events:</h2>
+    public string GetDescription(BeeFee.OrganizerApp.Projections.Event.EventProjection @event)
+    {
 
+        switch (@event.State)
+        {
+            case EEventState.Close:
+                return "регистрация закрыта";
+            case EEventState.Created:
+                return "вы не закончили создание события";
+            case EEventState.Moderating:
+                return "находится на модерации";
+            case EEventState.NotModerated:
+                return "модерация не пройдена";
+            case EEventState.Cancel:
+                return "события отменено";
+            case EEventState.Open:
+                return /*!@event.IsPublish?"вы закрыли регистрацию":*/"";
+
+        }
+        return "";
+    }
+}
 @if (Model.Count > 0)
 {
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>Name</th>
-            <th>Category</th>
-            <th>State</th>
-            <th>Dates</th>
-            <th>City</th>
-            <th>Address</th>
-            <th>Price</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
+    <div class="e-list">
         @foreach (var e in Model)
         {
-            <tr>
-                <td>@e.Name</td>
-                <td>@e.Category.Name</td>
-                <td>@e.State.ToString()</td>
-                <td>@e.DateTime</td>
-                <td>@e.Address.City</td>
-                <td>@e.Address.AddressString</td>
-                <td>@(e.Prices?.FirstOrDefault().Price.ToString())</td>
-                <td>
-					<a asp-action="Edit" asp-route-id="@e.Id" asp-route-companyId="@e.Parent.Id" >Edit</a>
-	                <a asp-action="Remove" asp-route-id="@e.Id" asp-route-companyId="@e.Parent.Id" asp-route-version="@e.Version">Remove</a>
-                </td>
-            </tr>
+            <div class="e-item">
+                <div class="e-item--head">
+                    <div class="e-item--title">@e.Name</div><a asp-action="Edit" asp-route-id="@e.Id" asp-route-companyId="@e.Parent.Id" class="e-item--btn is-edit"></a><a class="e-item--btn is-lock" href="#"></a><a asp-action="Preview" asp-route-id="@e.Id" asp-route-companyId="@e.Parent.Id" asp-route-version="@e.Version" class="e-item--btn is-view"></a><a asp-action="Remove" asp-route-id="@e.Id" asp-route-companyId="@e.Parent.Id" asp-route-version="@e.Version" class="e-item--btn is-delete"></a>
+                </div>
+                <div class="e-item--text">@GetDescription(e)</div>
+            </div>
         }
-        </tbody>
-    </table>
+        @*<div class="e-item">
+            <div class="e-item--head">
+                <div class="e-item--title">Концерт группы Mastodon</div><a class="e-item--btn is-edit" href="#"></a><a class="e-item--btn is-lock is-active" href="#"></a><a class="e-item--btn is-view" href="#"></a><a class="e-item--btn is-delete" href="#"></a>
+            </div>
+            <div class="e-item--text">вы закрыли регистрацию</div>
+        </div>
+        <div class="e-item">
+            <div class="e-item--head">
+                <div class="e-item--title">Закрытый кинопоказ Reservoir Dogs</div><a class="e-item--btn is-edit" href="#"></a><a class="e-item--btn is-lock" href="#"></a><a class="e-item--btn is-view is-active" href="#"></a><a class="e-item--btn is-delete" href="#"></a>
+            </div>
+            <div class="e-item--text">вы скрыли отображение мероприятия на сайте</div>
+        </div>
+        <div class="e-item">
+            <div class="e-item--head">
+                <div class="e-item--title">Queens of the Stone Age</div><a class="e-item--btn is-edit is-active" href="#"></a><a class="e-item--btn is-lock" href="#"></a><a class="e-item--btn is-view" href="#"></a><a class="e-item--btn is-delete" href="#"></a>
+            </div>
+            <div class="e-item--text">вы не закончили создание события</div>
+        </div>*@
+    </div>
+    @*<table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Category</th>
+                    <th>State</th>
+                    <th>Dates</th>
+                    <th>City</th>
+                    <th>Address</th>
+                    <th>Price</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var e in Model)
+                {
+                    <tr>
+                        <td>@e.Name</td>
+                        <td>@e.Category.Name</td>
+                        <td>@e.State.ToString()</td>
+                        <td>@e.DateTime</td>
+                        <td>@e.Address.City</td>
+                        <td>@e.Address.AddressString</td>
+                        <td>@(e.Prices?.FirstOrDefault().Price.ToString())</td>
+                        <td>
+                            <a asp-action="Edit" asp-route-id="@e.Id" asp-route-companyId="@e.Parent.Id">Edit</a>
+                            <a asp-action="Remove" asp-route-id="@e.Id" asp-route-companyId="@e.Parent.Id" asp-route-version="@e.Version">Remove</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>*@
 }
 
 else
 {
     <div class="text-center">
-        You don't have any events
+       Вы ещё не создали ни одного события
     </div>
 }
 <br /><br />
