--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Event/_RegisterToEventForm.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Event/_RegisterToEventForm.cshtml
@@ -9,7 +9,7 @@
                 <div class="input-field">
                     <div class="input-field--b">
                         <label class="input-field--l">Ваше имя</label>
-                        @Html.TextBoxFor(x => x.Name, new { @class = "input-field--i" })
+                        @Html.TextBoxFor(x => x.Name, new { @class = "input-field--i visitor-name" })
                     </div>
                     <div class="input-field--t"></div>
                 </div>
@@ -18,7 +18,7 @@
                 <div class="input-field">
                     <div class="input-field--b">
                         <label class="input-field--l">Номер телефона</label>
-                        @Html.TextBoxFor(x => x.Phone, new { @class = "input-field--i phone-number" })
+                        @Html.TextBoxFor(x => x.Phone, new { @class = "input-field--i visitor-phone-number" })
                     </div>
                     <div class="input-field--t"></div>
                 </div>
@@ -27,7 +27,7 @@
                 <div class="input-field">
                     <div class="input-field--b">
                         <label class="input-field--l">Электронная почта</label>
-                        @Html.TextBoxFor(x => x.Email, new { @class = "input-field--i" })
+                        @Html.TextBoxFor(x => x.Email, new { @class = "input-field--i visitor-email" })
                     </div>
                     <div class="input-field--t"></div>
                 </div>
