--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/_CreateOrUpdateEvent.Description.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/_CreateOrUpdateEvent.Description.cshtml
@@ -4,7 +4,8 @@
     Layout = null;
 }
 
-@model BeeFee.WebApplication.Areas.Org.Models.CreateOrUpdateEventDescriptionModel
+@model BeeFee.WebApplication.Areas.Org.Models.CreateOrUpdateEventModel
+<span asp-validation-for="Html" class="text-danger"></span>
 <div class="create--editor">
     <input type="hidden" asp-for="Html" />
     <div class="wysiwyg-editor"></div>
